# petitTutoCpp

./: CMakeLists.txt  README.md
data/: poissonGood.txt
exe/: main.cpp  pointersNonsense.cpp
src/: Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  MeshReader.cpp  MeshReader.h  Quadrature.cpp  Quadrature.h  myHeader.h  myImplementation.cpp
